<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background">

    <ImageView
        android:id="@+id/img_logo"
        style="@style/logo"
        android:src="@drawable/agoralogo" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="@dimen/_15sdp">

        <TextView
            android:id="@+id/txt_forgot_pass"
            style="@style/Both_Wrap_roboto_regular_style"
            android:layout_centerHorizontal="true"
            android:text="@string/forgot_pass"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txt_forgot_pass_desc"
            style="@style/Both_Wrap_roboto_regular_style"
            android:layout_below="@+id/txt_forgot_pass"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/forgot_pass_descp"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/usename_edittext"
            style="@style/Match_Wrap_roboto_light_style"
            android:layout_below="@+id/txt_forgot_pass_desc"
            android:background="@null"
            android:drawableLeft="@drawable/personal"
            android:drawablePadding="@dimen/_16sdp"
            android:hint="@string/login_username"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLength="4"
            android:padding="@dimen/_5sdp"
            android:textColor="@color/edit_text_color_white"
            android:textColorHint="@color/edit_text_color_white" />

        <View
            android:id="@+id/vwBelowUsername"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_below="@+id/usename_edittext"
            android:background="@color/login_edit_text_divider" />


        <EditText
            android:id="@+id/ed_email"
            style="@style/Match_Wrap_roboto_light_style"
            android:layout_below="@+id/vwBelowUsername"
            android:background="@null"
            android:drawableLeft="@drawable/contact_us"
            android:drawablePadding="@dimen/_16sdp"
            android:hint="Email Address"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress"
            android:padding="@dimen/_5sdp"
            android:textColor="@color/edit_text_color_white"
            android:textColorHint="@color/edit_text_color_white" />

        <View
            android:id="@+id/vwBelowPassword"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_below="@+id/ed_email"
            android:background="@color/login_edit_text_divider" />

        <LinearLayout
            android:id="@+id/layout_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/vwBelowPassword"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_cancel"
                style="@style/Match_Wrap_roboto_regular_style"
                android:layout_width="0dp"
                android:layout_marginRight="3dp"
                android:layout_weight="0.5"
                android:background="@drawable/button_yellow_click_effect"
                android:text="Cancel"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_18ssp" />

            <Button
                android:id="@+id/btn_submit"
                style="@style/Match_Wrap_roboto_regular_style"
                android:layout_width="0dp"
                android:layout_marginLeft="3dp"
                android:layout_weight="0.5"
                android:background="@drawable/button_yellow_click_effect"
                android:text="Submit"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_18ssp"  />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>